--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,10 +11,12 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    name: Test on go ${{ matrix.go_version }} and ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         go_version: ['1.20', '1.19', '>=1.20']
+        os: [ubuntu-latest, ubuntu-22.04, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v4
 
