--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,12 @@ jobs:
   test:
     name: Test (go ${{ matrix.go_version }}, os ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
+    env: 
+      HOST: localhost
+      PORT: 5432
+      USER: root
+      PASSWORD: root
+      DBNAME: root
     strategy:
       matrix:
         go_version: ['1.20', '1.19', '>=1.20']
