--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,11 +14,11 @@ jobs:
     name: Test (go ${{ matrix.go_version }}, os ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     env: 
-      HOST: localhost
-      PORT: 5432
-      USER: root
-      PASSWORD: root
-      DBNAME: root
+      HOST: ${{ env.DB_HOST }}
+      PORT: ${{ env.PORT }}
+      USER: ${{ env.DB_USER }}
+      PASSWORD: ${{ env.DB_PASSWORD }}
+      DB_NAME: ${{ env.DB_NAME }}
     strategy:
       matrix:
         go_version: ['1.20', '1.19', '>=1.20']
