--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,1 +1,14 @@
+name: Docker
 
+on:
+  workflow_call:
+
+jobs:
+  docker:
+    name: Test on ubuntu-latest
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up docker build
+      uses: docker/setup-buildx-action@v3.3.0
