--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,3 +12,9 @@ jobs:
 
     - name: Set up docker build
       uses: docker/setup-buildx-action@v3.3.0
+
+    - name: Docker Login
+      uses: docker/login-action@v3.2.0
+      with:
+        username: ferreiradavid
+        password: ${{ secrets.PASSWORD_DOCKER_HUB }}
