login no docker hub

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
       DB_NAME: root
     strategy:
       matrix:
-        go_version: ['1.20', '1.19', '>=1.20']
+        go_version: ['1.20', '1.19']
         os: [ubuntu-latest, ubuntu-22.04, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v4
