--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,3 +18,11 @@ jobs:
       with:
         username: ferreiradavid
         password: ${{ secrets.PASSWORD_DOCKER_HUB }}
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v6.0.0
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags:  ferreiradavid/go_ci:${{ github.ref_name }}          
