--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -11,25 +8,21 @@ on:
 
 jobs:
   test:
-    name: Test (go ${{ matrix.go_version }}, os ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
+    name: Test (go 1.20, ubuntu-latest)
+    runs-on: ubuntu-latest
     env: 
       HOST: localhost
       PORT: 5432
       USER: root
       PASSWORD: root
       DB_NAME: root
-    strategy:
-      matrix:
-        go_version: ['1.20', '1.19']
-        os: [ubuntu-latest, ubuntu-22.04, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: ${{ matrix.go_version }}
+        go-version: 1.20
 
     - name: Build DB
       run: docker-compose build
@@ -42,17 +35,20 @@ jobs:
       
   build:
     needs: test
-    name: Test (${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, ubuntu-22.04, ubuntu-20.04]
+    name: Test ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     
     - name: Build
       run: go build -v main.go
 
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.3.3
+      with:
+        name: app_go
+        path: main
+        
   docker:
     needs: build
     uses: ./.github/workflows/docker.yml
