--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,11 @@ jobs:
     - name: Set up docker build
       uses: docker/setup-buildx-action@v3.3.0
 
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v4.1.7
+      with:
+        name: app_go
+    
     - name: Docker Login
       uses: docker/login-action@v3.2.0
       with:
